<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start">Go!</string>

    <!--    Hauptmenu-->
    <string name="single_player">Mit PC spielen</string>
    <string name="online_player">Online spielen</string>
    <string name="rules">Spielregel</string>
    <string name="about">Über uns</string>
    <string name="back">Zurück</string>
    <string name="exit">App verlassen</string>

    <string name="alert_game_result_pos">Du bist gewonnen!</string>
    <string name="alert_game_result_lose">Du bist verloren!</string>
    <string name="alert_ask">Nochmal spielen?</string>
    <string name="nochmal_spielen">Spielen</string>
    <string name="zum_menu">Menu</string>

    <string name="login">Einloggen</string>
    <string name="login_status0">Du bist gar nicht eingeloggt, jetzt anmelden.</string>
    <string name="login_status_anon">Leg einen Account an, um alle Funktionen der App zu nutzen!</string>


    <!--    ActivityGame-->
    <string name="you_win">You Win!</string>
    <string name="you_lose">You Lose!</string>
    <string name="you_draw">You Draw!</string>
    <string name="du_hast_gewonnen">Herzlichen Glückwunsch, du hast gewonnen!</string>
    <string name="description_you_draw">Spiel unentschieden</string>
    <string name="du_hast_verloren">Schade :( \n Du hast verloren!</string>
    <!--    RadioGroup diffLevels-->
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>

    <!--    ActivityGame End-->

    <!-- OnlineGame -->
    <string name="label_opponent">Dein Gegenspieler:</string>
    <string name="no_game_yet">Noch kein Spiel gestartet...</string>
    <string name="placeholder_turn">Einfach Play drücken!</string>
    <string name="your_turn">Du bist am Zug!</string>
    <string name="oppo_turn">Dein Gegenspieler ist dran!\nEtwas Geduld... :-)</string>
    <string name="dialog_challenge_sent">Du sendest nun eine Spielaufforderung an den folgenden Spieler:</string>
    <string name="dialog_challenge_online">möchte gern eine Runde Tic Tac Toe gegen Dich spielen. Bitte nimm die Anfrage an.</string>
    <string name="dialog_game_confirmed">Dein Gegenspieler ist </string>
    <string name="oppo_icon_intro">Gegenspieler-Zeichen:</string>


    <string name="project_description">
        Lorem pixel dolor sirt amet
    </string>

    <string name="rules_description">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
        \nAt vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
        \nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
        \nAt vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
    </string>
    <string name="icon_waehlen">Icon</string>
    <string name="statistiken">Statistiken</string>
    <string name="playerchosen">Play</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="image_dialog_onlineanfrage">Warte auf Deinen Gegenspieler.</string>
    <string name="button_annehmen_onlineanfrage">Annehmen</string>
    <string name="button_ablehnen_onlineanfrage">Ablehnen</string>
    <string name="radiobutton_icon"></string>
    <string name="Icons_text_beschreibung">Du kannst Dir ein Icon zum Spielen aussuchen, und dann online oder mit dem PC spielen. Dein gewähltes Icon: </string>
    <string name="button_icons_pcspiel">Mit PC spielen</string>
    <string name="button_icon_onlinespiel">Online spielen</string>
    <string name="icontransport">Your Icon</string>
    <string name="icontransport_matchmaker">muh</string>
    <string name="Board_text_beschreibung">Du kannst Dir ein Spielbrett zum Spielen aussuchen, und dann online oder mit dem PC spielen. Dein gewähltes Spielbrett: </string>
    <string name="board_waehlen">Spielbrett</string>
    <string name="spielanleitung1">Tic Tac Toe ist ein einfaches Strategiespiel. Es wird mit einem Partner gespielt.  In unserem Tic Tac Toe hast Du die Wahl zwischen einem Spiel gegen den Computer im "gegen PC spielen" Modus,  oder einen menschlichen Spieler im "online spielen" Modus. Die Buttons findest Du in  der Hauptansicht. Früher hieß das Spiel auch „Drei gewinnt“.
Abwechselnd werden die Spielicons in ein 9x9 Spielfeld gesetzt.
Wer zuerst 3 Icons in einer waagerechten, senkrechten oder diagonalen Linie setzen kann, gewinnt.
Wenn nach 9 Zügen keiner eine Reihe legen konnte, endet das Spiel unentschieden. Unter Optionen/Icons kannst Du ein Icon zum Spielen auswählen. Viel Spaß beim Spielen! </string>
    <string name="button_back_rules">zurück</string>
    <string name="statistiken_text1">DUMMY TEXT Statistiken</string>
    <string name="statistiken_text2">Dummy der Nächste</string>
    <string name="zahnrad">Optionen Button Zahnrad</string>
    <string name="button_aboutus_zurück">Zurück</string>
    <string name="text_aboutUs">Wir sind eine Gruppe von Studierenden der Technischen Hochschule Brandenburg. Diese Tic Tac Toe App, wurde im Rahmen des Moduls \"Patterns und Frameworks\" von uns als gemeinsames Studienprojekt realisiert.</string>
    <string name="closeList">Liste schließen</string>
    <string name="spielmitmir">Du bist herzlich eingeladen mit mir zu spielen! Bitte clicke auf spielen.</string>
    <string name="btn_on_backTomenu">Menü</string>
    <string name="button_optionen_general">Optionen</string>
    <string name="statistiken_table_head_col1">Category</string>
    <string name="statistiken_table_head_col2">Result</string>
    <string name="statistiken_table_col1">Total Games</string>
    <string name="statistiken_table_col2">0</string>
    <string name="statistiken_table_wins_key">Wins</string>
    <string name="statistiken_table_wins_value">0</string>
    <string name="statistiken_table_totalgames_key">Total Games</string>
    <string name="statistiken_table_totalgames_value">0</string>
    <string name="statistiken_table_losses_key">Losses</string>
    <string name="statistiken_table_losses_value">0</string>
    <string name="statistiken_table_draws_key">Draws</string>
    <string name="statistiken_table_draws_value">0</string>
    <string name="statistiken_title">"Your Games! "</string>


</resources>
