<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#041042"
    tools:context=".menu.options.StatistikenActivity">


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="293dp"
        android:layout_height="372dp"
        app:layout_constraintBottom_toTopOf="@+id/button_aboutus_zurück"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/statistiken_title_id"
            android:layout_height="98dp"
            android:layout_gravity="start"
            android:fontFamily="@font/facon"
            android:lineSpacingExtra="16sp"
            android:text="@string/statistiken_title"
            android:textAlignment="viewStart"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:typeface="normal" />

        <!--        tablehead-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <!--        first row: total games-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/statistiken_table_totalgames_key"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_totalgames_key"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/statistiken_table_totalgames_value"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_totalgames_value"
                android:textSize="20sp"
                android:typeface="normal" />

        </TableRow>

        <!--        2. row: wins-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/statistiken_table_wins_key"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_wins_key"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/statistiken_table_wins_value"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_wins_value"
                android:textSize="20sp"
                android:typeface="normal" />

        </TableRow>

        <!--        3. row: losses -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/statistiken_table_losses_key"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_losses_key"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/statistiken_table_losses_value"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_losses_value"
                android:textSize="20sp"
                android:typeface="normal" />

        </TableRow>

        <!--        4. row: draws-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/statistiken_table_draws_key"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_draws_key"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/statistiken_table_draws_value"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="16sp"
                android:text="@string/statistiken_table_draws_value"
                android:textSize="20sp"
                android:typeface="normal" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="72dp" />


    </TableLayout>

    <Button
        android:id="@+id/button_aboutus_zurück"
        android:layout_width="@dimen/width_menu_btn"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="108dp"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:onClick="backToOpionenActivity"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/button_aboutus_zurück"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>