<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/main_background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="25pt"
        android:text="@string/login_status0"
        android:padding="10dp"
        android:fontFamily="@font/facon"
        android:textColor="@color/teal_200"
        android:background="@drawable/btn_press_white"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/btn_singleGame"
        android:layout_width="@dimen/width_menu_btn"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/single_player"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn" />

    <Button
        android:id="@+id/button_onlineGame"
        android:layout_width="@dimen/width_menu_btn"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/online_player"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn" />

    <Button
        android:id="@+id/button_rules"
        android:layout_width="@dimen/width_menu_btn"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/rules"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn" />

    <Button
        android:id="@+id/button_showAbout"
        android:layout_width="@dimen/width_menu_btn"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/about"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="@dimen/width_menu_btn"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/exit"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/width_menu_btn"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn" />

</LinearLayout>