<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".GameActivity">

    <RadioGroup
        android:id="@+id/difficultyLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"

            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hard" />
    </RadioGroup>


    <TableLayout
        android:layout_width="@dimen/size_play_board"
        android:layout_height="@dimen/size_play_board"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/play_board"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/block0"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"

                />

            <ImageView
                android:id="@+id/block1"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"
                android:layout_marginLeft="10dp"

                />

            <ImageView
                android:id="@+id/block2"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"
                android:layout_marginLeft="10dp"

                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/block3"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"
                android:layout_marginTop="5dp"

                />

            <ImageView
                android:id="@+id/block4"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"
                android:layout_marginLeft="10dp"

                />

            <ImageView
                android:id="@+id/block5"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"
                android:layout_marginLeft="10dp"

                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp">

            <ImageView
                android:id="@+id/block6"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"

                />

            <ImageView
                android:id="@+id/block7"
                android:layout_margin="3dp"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"

                />

            <ImageView
                android:id="@+id/block8"
                android:layout_width="@dimen/size_cross_zero_image"
                android:layout_height="@dimen/size_cross_zero_image"

                />
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/restartGame"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/restart_btn"
        android:onClick="restartGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.55"        />


</androidx.constraintlayout.widget.ConstraintLayout>