<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_icon_pcspielen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#041042"
    tools:context=".IconwahlActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437">

        <RadioGroup
            android:id="@+id/icons_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radiobutton_icon1"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:drawableStart="@drawable/blume_eckig_3d_90"
                android:onClick="onClickedIcon1"/>

            <RadioButton
                android:id="@+id/radiobutton_icon2"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:drawableStart="@drawable/donat_3d_blau_90"
                android:onClick="onClickedIcon2"/>

            <RadioButton
                android:id="@+id/radiobutton_icon3"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:drawableStart="@drawable/stern_90"
                android:onClick="onClickedIcon3"/>

            <RadioButton
                android:id="@+id/radiobutton_icon4"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:drawableStart="@drawable/donat_3d_gold_90"
                android:onClick="onClickedIcon4"/>

            <RadioButton
                android:id="@+id/radiobutton_icon5"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:drawableStart="@drawable/lebkuchenherz_3d_90"
                android:onClick="onClickedIcon5"/>

            <RadioButton
                android:id="@+id/radiobutton_icon6"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:drawableStart="@drawable/kleeblatt_3d_90"
                android:onClick="onClickedIcon6"/>


        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/Icons_text_beschreibung"
        android:layout_width="165dp"
        android:layout_height="182dp"
        android:text="@string/Icons_text_beschreibung"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/button_icons_pcspiel"
        android:layout_width="164dp"
        android:layout_height="71dp"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/single_player"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <Button
        android:id="@+id/button_icon_onlinespiel"
        android:layout_width="161dp"
        android:layout_height="71dp"
        android:background="@drawable/btn_press_white"
        android:fontFamily="@font/facon"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/button_icon_onlinespiel"
        android:textAllCaps="true"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/textSize_menu_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <ImageView
        android:id="@+id/icontransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/donat_3d_gold_90" />

</androidx.constraintlayout.widget.ConstraintLayout>